--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Puerto
 server.port=8080
 
-# Conexión a PostgreSQL
+# Conexion a PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/chatbotdb
 spring.datasource.username=postgres
 spring.datasource.password=diego123
